--- a/ui/Ui_Operator.ui
+++ b/ui/Ui_Operator.ui
@@ -34,10 +34,10 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>150</y>
-     <width>481</width>
-     <height>91</height>
+     <x>230</x>
+     <y>210</y>
+     <width>561</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="title">
@@ -48,7 +48,7 @@
      <rect>
       <x>10</x>
       <y>30</y>
-      <width>241</width>
+      <width>171</width>
       <height>41</height>
      </rect>
     </property>
@@ -59,9 +59,9 @@
    <widget class="QPushButton" name="button_quit">
     <property name="geometry">
      <rect>
-      <x>260</x>
+      <x>190</x>
       <y>30</y>
-      <width>201</width>
+      <width>171</width>
       <height>41</height>
      </rect>
     </property>
@@ -69,14 +69,27 @@
      <string>关闭程序</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="button_close">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>30</y>
+      <width>171</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>返回</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>10</y>
-     <width>291</width>
-     <height>131</height>
+     <x>0</x>
+     <y>150</y>
+     <width>491</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="title">
@@ -87,11 +100,11 @@
      <rect>
       <x>20</x>
       <y>30</y>
-      <width>261</width>
-      <height>91</height>
+      <width>461</width>
+      <height>23</height>
      </rect>
     </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QLabel" name="label_op_user">
        <property name="text">
@@ -113,9 +126,9 @@
    <property name="geometry">
     <rect>
      <x>500</x>
-     <y>150</y>
+     <y>10</y>
      <width>291</width>
-     <height>211</height>
+     <height>201</height>
     </rect>
    </property>
    <property name="font">
@@ -130,9 +143,9 @@
    <widget class="QWidget" name="formLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>30</y>
-      <width>261</width>
+      <width>271</width>
       <height>111</height>
      </rect>
     </property>
@@ -184,9 +197,9 @@
    <widget class="QPushButton" name="button_change_password">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>150</y>
-      <width>261</width>
+      <width>271</width>
       <height>41</height>
      </rect>
     </property>
@@ -200,19 +213,6 @@
      <string>确定</string>
     </property>
    </widget>
-  </widget>
-  <widget class="QPushButton" name="button_close">
-   <property name="geometry">
-    <rect>
-     <x>664</x>
-     <y>422</y>
-     <width>131</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>关闭面板</string>
-   </property>
   </widget>
   <widget class="QGroupBox" name="groupBox_4">
    <property name="geometry">
@@ -244,27 +244,126 @@
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="label_network">
-       <property name="text">
-        <string>网络连接：</string>
-       </property>
-      </widget>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QLabel" name="label_4">
+         <property name="maximumSize">
+          <size>
+           <width>80</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>数据库：</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_db_status">
+         <property name="text">
+          <string>TextLabel</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_5">
+         <property name="maximumSize">
+          <size>
+           <width>60</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>MQTT:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_mqtt_status">
+         <property name="text">
+          <string>TextLabel</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
     </layout>
    </widget>
+  </widget>
+  <widget class="QWidget" name="widget_keyboard" native="true">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>290</y>
+     <width>570</width>
+     <height>175</height>
+    </rect>
+   </property>
   </widget>
   <widget class="QGroupBox" name="groupBox_5">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>240</y>
-     <width>481</width>
-     <height>231</height>
+     <y>210</y>
+     <width>211</width>
+     <height>261</height>
     </rect>
    </property>
    <property name="title">
-    <string>商品控制</string>
+    <string>物品管理</string>
    </property>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>191</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>90</y>
+      <width>191</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>150</y>
+      <width>191</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_4">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>210</y>
+      <width>191</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
