--- a/ui/Ui_main.ui
+++ b/ui/Ui_main.ui
@@ -107,15 +107,211 @@
       <property name="title">
        <string>地图</string>
       </property>
-      <widget class="QTableView" name="tableView_map">
+      <widget class="QTableWidget" name="tableWidget">
        <property name="geometry">
         <rect>
          <x>10</x>
          <y>20</y>
          <width>321</width>
-         <height>431</height>
+         <height>421</height>
         </rect>
        </property>
+       <property name="autoScroll">
+        <bool>true</bool>
+       </property>
+       <property name="autoScrollMargin">
+        <number>16</number>
+       </property>
+       <property name="showGrid">
+        <bool>false</bool>
+       </property>
+       <attribute name="horizontalHeaderVisible">
+        <bool>false</bool>
+       </attribute>
+       <attribute name="horizontalHeaderMinimumSectionSize">
+        <number>17</number>
+       </attribute>
+       <attribute name="horizontalHeaderDefaultSectionSize">
+        <number>17</number>
+       </attribute>
+       <attribute name="horizontalHeaderHighlightSections">
+        <bool>true</bool>
+       </attribute>
+       <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+        <bool>true</bool>
+       </attribute>
+       <attribute name="verticalHeaderVisible">
+        <bool>false</bool>
+       </attribute>
+       <attribute name="verticalHeaderMinimumSectionSize">
+        <number>26</number>
+       </attribute>
+       <attribute name="verticalHeaderDefaultSectionSize">
+        <number>26</number>
+       </attribute>
+       <attribute name="verticalHeaderHighlightSections">
+        <bool>false</bool>
+       </attribute>
+       <row>
+        <property name="text">
+         <string>1</string>
+        </property>
+       </row>
+       <row>
+        <property name="text">
+         <string>2</string>
+        </property>
+       </row>
+       <row>
+        <property name="text">
+         <string>3</string>
+        </property>
+       </row>
+       <row>
+        <property name="text">
+         <string>4</string>
+        </property>
+       </row>
+       <row>
+        <property name="text">
+         <string>5</string>
+        </property>
+       </row>
+       <row>
+        <property name="text">
+         <string>6</string>
+        </property>
+       </row>
+       <row>
+        <property name="text">
+         <string>7</string>
+        </property>
+       </row>
+       <row>
+        <property name="text">
+         <string>8</string>
+        </property>
+       </row>
+       <row>
+        <property name="text">
+         <string>9</string>
+        </property>
+       </row>
+       <row>
+        <property name="text">
+         <string>10</string>
+        </property>
+       </row>
+       <row>
+        <property name="text">
+         <string>11</string>
+        </property>
+       </row>
+       <row>
+        <property name="text">
+         <string>12</string>
+        </property>
+       </row>
+       <row>
+        <property name="text">
+         <string>13</string>
+        </property>
+       </row>
+       <row>
+        <property name="text">
+         <string>14</string>
+        </property>
+       </row>
+       <row>
+        <property name="text">
+         <string>15</string>
+        </property>
+       </row>
+       <row>
+        <property name="text">
+         <string>16</string>
+        </property>
+       </row>
+       <column>
+        <property name="text">
+         <string>A</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>B</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>C</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>D</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>E</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>F</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>G</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>H</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>I</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>J</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>K</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>L</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>M</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>N</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>O</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>P</string>
+        </property>
+       </column>
       </widget>
      </widget>
      <widget class="QGroupBox" name="groupBox_5">
@@ -142,7 +338,7 @@
          <x>10</x>
          <y>30</y>
          <width>361</width>
-         <height>61</height>
+         <height>51</height>
         </rect>
        </property>
        <property name="font">
@@ -181,9 +377,9 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>20</y>
+         <y>30</y>
          <width>361</width>
-         <height>221</height>
+         <height>211</height>
         </rect>
        </property>
       </widget>
@@ -437,54 +633,41 @@
        </property>
       </widget>
      </widget>
+     <widget class="QPushButton" name="button_debug_2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>270</y>
+        <width>151</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>从导购添加</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="button_debug_3">
+      <property name="geometry">
+       <rect>
+        <x>180</x>
+        <y>270</y>
+        <width>151</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>添加</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_3">
      <attribute name="title">
       <string>管理员</string>
      </attribute>
-     <widget class="QPushButton" name="button_debug_3">
-      <property name="geometry">
-       <rect>
-        <x>590</x>
-        <y>100</y>
-        <width>151</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>AddList2</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="button_debug_2">
-      <property name="geometry">
-       <rect>
-        <x>590</x>
-        <y>50</y>
-        <width>151</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>AddList</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="button_debug_1">
-      <property name="geometry">
-       <rect>
-        <x>590</x>
-        <y>0</y>
-        <width>151</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Exit</string>
-      </property>
-     </widget>
      <widget class="QGroupBox" name="groupBox_8">
       <property name="geometry">
        <rect>
-        <x>180</x>
+        <x>200</x>
         <y>20</y>
         <width>341</width>
         <height>221</height>
@@ -528,12 +711,18 @@
           <property name="focusPolicy">
            <enum>Qt::StrongFocus</enum>
           </property>
+          <property name="text">
+           <string>root</string>
+          </property>
          </widget>
         </item>
         <item row="1" column="1">
          <widget class="QLineEdit" name="line_password">
           <property name="focusPolicy">
            <enum>Qt::StrongFocus</enum>
+          </property>
+          <property name="text">
+           <string>root</string>
           </property>
           <property name="echoMode">
            <enum>QLineEdit::Password</enum>
@@ -599,6 +788,16 @@
         <string>键盘</string>
        </property>
       </widget>
+     </widget>
+     <widget class="QWidget" name="widget_keyboard" native="true">
+      <property name="geometry">
+       <rect>
+        <x>90</x>
+        <y>270</y>
+        <width>570</width>
+        <height>175</height>
+       </rect>
+      </property>
      </widget>
     </widget>
    </widget>
